; ModuleID = '/home/carl/AnghaBench/mpv/audio/out/extr_push.c_get_delay.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/out/extr_push.c_get_delay.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ao = type { %struct.ao_push_state* }
%struct.ao_push_state = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (double (%struct.ao*)* @get_delay to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @get_delay(%struct.ao* %0) #0 {
  %2 = alloca %struct.ao*, align 8
  %3 = alloca %struct.ao_push_state*, align 8
  %4 = alloca double, align 8
  store %struct.ao* %0, %struct.ao** %2, align 8
  %5 = load %struct.ao*, %struct.ao** %2, align 8
  %6 = getelementptr inbounds %struct.ao, %struct.ao* %5, i32 0, i32 0
  %7 = load %struct.ao_push_state*, %struct.ao_push_state** %6, align 8
  store %struct.ao_push_state* %7, %struct.ao_push_state** %3, align 8
  %8 = load %struct.ao_push_state*, %struct.ao_push_state** %3, align 8
  %9 = getelementptr inbounds %struct.ao_push_state, %struct.ao_push_state* %8, i32 0, i32 0
  %10 = call i32 @pthread_mutex_lock(i32* %9)
  %11 = load %struct.ao*, %struct.ao** %2, align 8
  %12 = call double @unlocked_get_delay(%struct.ao* %11)
  store double %12, double* %4, align 8
  %13 = load %struct.ao_push_state*, %struct.ao_push_state** %3, align 8
  %14 = getelementptr inbounds %struct.ao_push_state, %struct.ao_push_state* %13, i32 0, i32 0
  %15 = call i32 @pthread_mutex_unlock(i32* %14)
  %16 = load double, double* %4, align 8
  ret double %16
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local double @unlocked_get_delay(%struct.ao*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
